# hw_python_web_two

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
hw_python_web_two/: Dockerfile  main.py  requirements.txt
hw_python_web_two/notes/: Den.txt
